--- a/src/app/trip/landing/landings.table.html
+++ b/src/app/trip/landing/landings.table.html
@@ -504,7 +504,13 @@
     <!-- Divider -->
     <ng-container matColumnDef="divider" [sticky]="sticky" [class.mat-mdc-column-sticky]="sticky">
       <td mat-cell colspan="4" *matCellDef="let row" class="divider">
-        <ion-text>PETS</ion-text>
+        @if (mobile) {
+          <ion-text [innerHTML]="row.currentData | propertyGet: ['measurementValues', pmfmIdsMap.SPECIES_LIST_ORIGIN, 'name']"></ion-text>
+        } @else {
+          <ion-text
+            [innerHTML]="row.validator | formGetValue: 'measurementValues' | mapGet: pmfmIdsMap.SPECIES_LIST_ORIGIN | mapGet: 'name'"
+          ></ion-text>
+        }
       </td>
     </ng-container>
     <ng-container matColumnDef="dividerColspan">
