Fix(Calendar)  Title in vessel page

--- a/src/app/activity-calendar/page/activity-calendar.page.html
+++ b/src/app/activity-calendar/page/activity-calendar.page.html
@@ -221,7 +221,9 @@
             </ion-row>
             <ion-row>
               <ion-col>
-                <h3>Photos</h3>
+                <h3>
+                  <ion-label translate>ACTIVITY_CALENDAR.EDIT.PHOTO</ion-label>
+                </h3>
                 <app-image-attachment-gallery
                   #galleryHistory
                   [disabled]="disabled"
