--- a/src/app/trip/landing/landings.table.scss
+++ b/src/app/trip/landing/landings.table.scss
@@ -72,6 +72,7 @@ mat-toolbar {
       background-color: var(--ion-color-light, whitesmoke) !important;
       font-weight: bold;
       font-size: 12px !important;
+      padding-left: 8px;
     }
   }
 }
