--- a/src/app/activity-calendar/report/form/form-activity-calendar.report.scss
+++ b/src/app/activity-calendar/report/form/form-activity-calendar.report.scss
@@ -25,6 +25,10 @@
         thead {
           th,
           td {
+            &.activity-not-exists,
+            &.activity-inactive {
+              background-color: rgba(var(--ion-color-medium-rgb), 0.8) !important;
+            }
             &.fit-one-line {
               position: relative;
               & > div {
